Prevent overflow in CSS styling of pre and code elements

--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -40,12 +40,20 @@
   font-weight: 400;
 }
 
+.blog-post pre {
+  display: inline-block;
+  width: 100%;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+}
+
 .blog-post code {
   display: inline-block;
   width: 100%;
+  box-sizing: border-box;
   background-color: #333;
   color: #fff;
-  padding: 1rem 1rem;
+  padding: 1rem;
   border-radius: 0.25rem;
 }
 
